--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "simpsons": "node simpsons_exercise_4.js",
-    "5": "node exercicio-5.js"
+    "5": "node exercicio-5.js",
+    "6": "node exercicio-6.js"
   },
   "repository": {
     "type": "git",
