--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "simpsons": "node simpsons_exercise_4.js",
     "5": "node exercicio-5.js",
-    "6": "node exercicio-6.js"
+    "6": "node exercicio-6.js",
+    "7": "node exercicio-7.js"
   },
   "repository": {
     "type": "git",
